# emojimix

./: build.gradle  gradle.properties
app/: build.gradle
app/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: 16_16.json  boton_animados.json  boton_disable.json  boton_estaticos.json  botondescarga.json  btn_home.json  buscar1.json  buscar2.json  capa_blanca.json  logointro.json  mano_intro.json  mas.json  mas_nuevo.json  prue.json
app/src/main/cpp/jni/: Android.mk  CMakeLists.txt  CMakeListsEjecutable.txt  gif_encoder.cpp  gif_encoder_gif.cpp  gif_encoder_muxv.cpp
app/src/main/cpp/jni/examples/: example_util.h  gif2webp.c  img2webp.c  unicode_gif.h
app/src/main/cpp/jni/imageio/: image_dec.c  webpdec.c
app/src/main/cpp/jni/jniLibs/arm64-v8a/: gif2webp
app/src/main/cpp/jni/jniLibs/armeabi-v7a/: gif2webp
app/src/main/cpp/jni/jniLibs/x86/: gif2webp
app/src/main/cpp/jni/jniLibs/x86_64/: gif2webp
app/src/main/cpp/jni/sharpyuv/: sharpyuv.c  sharpyuv_csp.c  sharpyuv_dsp.c  sharpyuv_gamma.c  sharpyuv_gamma.h
app/src/main/cpp/jni/src/dec/: alpha_dec.c  alphai_dec.h  buffer_dec.c  frame_dec.c  idec_dec.c  io_dec.c  quant_dec.c  tree_dec.c  vp8_dec.c  vp8_dec.h  vp8i_dec.h  vp8l_dec.c  vp8li_dec.h  webp_dec.c  webpi_dec.h
app/src/main/cpp/jni/src/demux/: anim_decode.c  demux.c
app/src/main/cpp/jni/src/dsp/: alpha_processing.c  alpha_processing_mips_dsp_r2.c  alpha_processing_neon.c  alpha_processing_sse2.c  alpha_processing_sse41.c  cost.c  cost_mips32.c  cost_neon.c  cost_sse2.c  cpu.c  cpu.h  dec.c  dec_mips32.c  dec_mips_dsp_r2.c  dec_msa.c  dec_neon.c  dec_sse2.c  dsp.h  enc.c  enc_mips32.c  enc_mips_dsp_r2.c  enc_msa.c  enc_neon.c  enc_sse2.c  enc_sse41.c  filters.c  filters_mips_dsp_r2.c  filters_msa.c  filters_neon.c  filters_sse2.c  lossless.c  lossless.h  lossless_common.h  lossless_enc.c  lossless_enc_mips32.c  lossless_enc_mips_dsp_r2.c  lossless_enc_msa.c  lossless_enc_neon.c  lossless_enc_sse2.c  lossless_enc_sse41.c  (+22 more)
app/src/main/cpp/jni/src/enc/: alpha_enc.c  backward_references_cost_enc.c  backward_references_enc.c  config_enc.c  cost_enc.c  cost_enc.h  histogram_enc.c  histogram_enc.h  iterator_enc.c  predictor_enc.c  quant_enc.c  vp8i_enc.h  vp8l_enc.c  vp8li_enc.h
app/src/main/cpp/jni/src/mux/: anim_encode.c  muxedit.c  muxi.h  muxread.c
app/src/main/cpp/jni/src/utils/: bit_reader_inl_utils.h  bit_reader_utils.c  bit_reader_utils.h  endian_inl_utils.h  huffman_encode_utils.c  huffman_utils.c  huffman_utils.h  palette.c  palette.h  thread_utils.h  utils.c  utils.h
app/src/main/res/anim/: animacion.xml  animacionrisa.xml  borracho.xml  congelado.xml  escalar.xml  levitacion.xml  rotacion.xml  triste.xml
app/src/main/res/drawable/: fondo_azul_botones.xml  ic_whatsapp.xml  ojos3.xml
app/src/main/res/layout/: activity_estaticos.xml  (+21 more)
src/main/: AndroidManifest.xml
src/main/assets/: compartir.json  derecha.json  izquierda.json
src/main/res/drawable/: boder.xml  fondo_stickers.xml
src/main/res/layout/: activity_image_viewer.xml  activity_main.xml  activity_vista_sticker.xml  custom_dialog_deleteimage.xml  dialogo_trasparente_imagen.xml  dilog_listaimagenes.xml  emojis_slider_item.xml  stickers_add_bottom_fragment.xml
src/main/res/values/: strings.xml
(+191 files in other folders)
